--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <audio  loop autoplay>
-        <source src="./music/ARIJIT SINGH_ Woh Din Lyrical _ Chhichhore _ Sushant, Shraddha _ Pritam, Amitabh.mp3">
+        <source src="./music/ARIJIT SINGH_ Woh Din Lyrical _ Chhichhore _ Sushant, Shraddha _ Pritam, Amitabh.mp3" type="audio/mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
