--- a/next page/index.html
+++ b/next page/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<audio autoplay muted preload="auto"  loop >
+<audio autoplay  preload="auto"  loop >
   <source src="./songs/Haravali Pakhare Lyrics Song _ BP ( Balak - Palak ) By Shekhar Ravijani @itsnsmumbai #itsnsmumbau.mp3"   type="audio/mp3">
 </audio>
 <div class="Container" id="one">
